Fix z-index in firefox

--- a/static/css/main_new.less
+++ b/static/css/main_new.less
@@ -97,7 +97,7 @@ a.sub-comments {
   position: absolute;
   top: 52px;
   left: @featured_posts_width;
-  z-index: -5;
+  z-index: 999;
 }
 
 #post_stream {
@@ -216,7 +216,7 @@ a.sub-comments {
     color: #777;
   }
   #navigation_items {
-    z-index: -4;
+    z-index: 1000;
     li {
       a:hover {
         text-decoration: none;
